# EncryptedSearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_5gb_data.py  implementation_plan.md  企业级可优化功能.md
build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EncryptedSearch.sln  EncryptedSearch.vcxproj  EncryptedSearch.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_msvc/EncryptedSearch.dir/Release/: EncryptedSearch.exe.recipe
build_msvc/EncryptedSearch.dir/Release/EncryptedSearch.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/core/: CryptoEngine.hpp
include/index/: IndexStructs.hpp  Indexer.hpp  ParallelHasher.hpp
include/search/: QueryParser.hpp  Searcher.hpp
src/: main.cpp
src/core/: CryptoEngine.cpp
src/index/: Indexer.cpp  ParallelHasher.cpp
src/search/: QueryParser.cpp  Searcher.cpp
